Gravity flip and people by age

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <script src="./js/sharkPontoon.js" type="module"></script>
+    <script src="./js/gravityFlip.js" type="module"></script>
+    <script src="./js/peopleByAge.js" type="module"></script>
 </body>
 </html>
