--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <script src="./js/sharkPontoon.js" type="module"></script>
     <script src="./js/gravityFlip.js" type="module"></script>
     <script src="./js/peopleByAge.js" type="module"></script>
+    <script src="./js/letsTalk.js" type="module"></script>
 </body>
 </html>
